Bug#22564, "auto_increment column gets automatically incremented"

Removed HA_AUTO_PART_KEY from StorageInterface::table_flags().
This will allow autoincrement columns to be defined in multipart
indexes, but only as the first column of the index.